udpated makefiles to build dynamic libraries on linux and mac

--- a/src/Makefile.config
+++ b/src/Makefile.config
@@ -3,18 +3,31 @@
 PRJ_ROOT = /Users/rhalstea/projects/vhdl_api/src
 
 # the compiler to use
-CXX = g++
-CC = gcc
+CXX               = g++
+CC                = gcc
 
-CXX_FLAGS = -fPIC
+CXX_FLAGS         = -fPIC
+
+
+# compiler flags to generate shared libraries
+SHARED_LIB_FLAGS  = @echo "Unsupported OS"
+OS_TYPE           = $(shell uname)
+
+ifeq ($(OS_TYPE), Linux)
+   SHARED_LIB_FLAGS = ld -G
+endif
+
+ifeq ($(OS_TYPE), Darwin) # Mac OSX
+   SHARED_LIB_FLAGS = -dynamiclib -undefined suppress -flat_namespace
+endif
 
 # important directories
-INCLUDE_DIR    = $(PRJ_ROOT)/include
-LIBRARY_DIR    = $(PRJ_ROOT)/lib
-OBJECT_DIR     = $(PRJ_ROOT)/bin/lib
+INCLUDE_DIR       = $(PRJ_ROOT)/include
+LIBRARY_DIR       = $(PRJ_ROOT)/lib
+OBJECT_DIR        = $(PRJ_ROOT)/bin/lib
 
 # sub directories for include files
-INCLUDE_SUB_DIR   = /vhdl
+INCLUDE_SUB_DIR   = vhdl
 
 # paths to required programs
-ECHO        := /bin/echo 
+ECHO              := /bin/echo 
