udpated the makefiles

--- a/src/Makefile.config
+++ b/src/Makefile.config
@@ -6,7 +6,7 @@ PRJ_ROOT = /Users/rhalstea/projects/vhdl_api/src
 CXX               = g++
 CC                = gcc
 
-CXX_FLAGS         = -fPIC
+CXX_FLAGS         = -Wall -fPIC
 
 
 # compiler flags to generate shared libraries
